fix: add flex to wrapper class to resolve footer overlap issue

--- a/core/css/guest.css
+++ b/core/css/guest.css
@@ -186,6 +186,7 @@ body {
     max-width: unset;
     margin-top: 0;
     display: inline;
+    flex: 1;
 }
 
 .createaccmob{
